--- a/index.html
+++ b/index.html
@@ -64,9 +64,8 @@
             <div class="modal-body">
               <form name="form" ng-submit="saveUser(form.$valid)" novalidate>
                 <div class="form-row">
-                      <div class="form-group col-sm-4" ng-class="{ 'has-error' : form.name.$invalid && !form.name.$pristine }">
+                      <div class="form-group col-sm-4">
                         <input id="name" name="name" type="text" ng-minlength="3" class="form-control form-control-sm" ng-model="userForm.name" placeholder="Nome" required />
-                        <p ng-show="{submitted}" class="help-block">Username no mínimo 3 caracteres.{{submitted}}</p>
                       </div>
                       <div class="form-group col-sm-8">
                         <input id="lastname" type="text" class="form-control form-control-sm" ng-model="userForm.lastname" placeholder="Sobrenome" required />
