--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       
       <table class="table table-hover w-100 table-fixed col-sm-5">
           <thead>
-            <tr class="">
+            <tr>
               <th class="col-2">Nome</th>
               <th class="col-3">Sobrenome</th>
               <th class="col-3">E-mail</th>
@@ -52,6 +52,11 @@
               </td>
               <td class="col-2">
                 <button type="button" class="btn btn-outline-danger btn-sm" data-toggle="modal" data-target="#deleteUser" ng-click="selectUser(user)">Excluir</button>
+              </td>
+            </tr>
+            <tr ng-init="empty=false" ng-show="empty" class="userList-empty text-center">
+              <td class="col mt-5 border-0 text-secondary">
+                <span>Nenhum usuário cadastrado :(</span>
               </td>
             </tr>
           </tbody>
